--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="col mt-5 pt-5" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
-              <h4>Happy Birthday yang ke-19 Adek Syifa ❤</h4>
+              <h4>Happy Birthday yang ke-19 Adek Syifa 🥳❤</h4>
             </div>
           </div>
         </div>
@@ -69,7 +69,7 @@
         <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
-              <h4>Semoga Panjang Umur ❤</h4>
+              <h4>Semoga Panjang Umur 😇</h4>
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
-              <h4>Sehat Selalu ❤</h4>
+              <h4>Sehat Selalu 🙏</h4>
             </div>
           </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
-              <h4>Jangan Suka Marah-Marah yaa ❤</h4>
+              <h4>Jangan Suka Marah-Marah yaa 🥰❤</h4>
             </div>
           </div>
         </div>
@@ -99,27 +99,60 @@
         <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
-              <h4>Semoga Cita Citanya Bisa Tercapai ❤</h4>
+              <h4>Kamu Jangan Sering Sakit dong 😊</h4>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="row my-4">
         <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
-              <h4>Tetap Jadi Anak Baik ya ❤</h4>
+              <h4>Abang Bingung Harus Ngapain Kalo Kamu Sakit 😥</h4>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="row my-4">
-        <div class="col" data-aos="fade-up" data-aos-duration="1000">
+      <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
-              <h4>Selalu Berbakti Sama Orang Tua ❤</h4>
+              <h4>Selalu Jadi Orang Baik yaa 🤗</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <div class="col" data-aos="fade-up" data-aos-duration="1000">
+          <div class="card">
+            <div class="card-body text-center">
+              <h4>Berbakti Kepada Kedua Orang Tua 😉</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <div class="col" data-aos="fade-up" data-aos-duration="1000">
+          <div class="card">
+            <div class="card-body text-center">
+              <h4>Semoga Hal Hal Baik Mendekati Adek Untuk Kedepannya 🥰</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+  <div class="col" data-aos="fade-up" data-aos-duration="1000">
+          <div class="card">
+            <div class="card-body text-center">
+              <h4>Abang Saaayaaang Sama Adek 🥰😘❤</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <div class="col" data-aos="fade-up" data-aos-duration="1000">
+          <div class="card">
+            <div class="card-body text-center">
+              <h2>I Love You ❤❤❤</h2>
             </div>
           </div>
         </div>
