--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         </div>
       </div>
 
+      <div class="row my-4">
         <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
@@ -114,7 +115,8 @@
         </div>
       </div>
 
-      <div class="col" data-aos="fade-up" data-aos-duration="1000">
+      <div class="row my-4">
+        <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
               <h4>Selalu Jadi Orang Baik yaa 🤗</h4>
@@ -123,7 +125,8 @@
         </div>
       </div>
 
-    <div class="col" data-aos="fade-up" data-aos-duration="1000">
+      <div class="row my-4">
+        <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
               <h4>Berbakti Kepada Kedua Orang Tua 😉</h4>
@@ -132,7 +135,8 @@
         </div>
       </div>
 
-    <div class="col" data-aos="fade-up" data-aos-duration="1000">
+      <div class="row my-4">
+        <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
               <h4>Semoga Hal Hal Baik Mendekati Adek Untuk Kedepannya 🥰</h4>
@@ -140,7 +144,9 @@
           </div>
         </div>
       </div>
-  <div class="col" data-aos="fade-up" data-aos-duration="1000">
+
+      <div class="row my-4">
+        <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
               <h4>Abang Saaayaaang Sama Adek 🥰😘❤</h4>
@@ -149,7 +155,8 @@
         </div>
       </div>
 
-    <div class="col" data-aos="fade-up" data-aos-duration="1000">
+      <div class="row my-4">
+        <div class="col" data-aos="fade-up" data-aos-duration="1000">
           <div class="card">
             <div class="card-body text-center">
               <h2>I Love You ❤❤❤</h2>
